[package]
name = "find-nas-client"
version = "0.1.0"
authors = ["LI Rui <lr_cn@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27.2"
reqwest = {version="0.11.1", features=["json"]}
serde_json = "1.0.64"
tokio = {version="1.2.0", features=["full"]}
serde = {version="1.0.123", features=["derive"]}
clap = "3.0.0-beta.2"
chrono = "0.4.19"
openssl = { version = "0.10.32", features = ["vendored"] }